infrastructure/0-argo-cd-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ui
  namespace: argocd
spec:
  entryPoints:
  - websecure-local
  tls: {}
  routes:
  - match: Host(`argocd.steffenillium.de`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
